Fix off-by-one error in CSSAnimations::PropertiesForTransitionAll.

This patch fixes an off-by-one error in CSSAnimations which caused
the last CSS properties (in order of CSSPropertyID) to not transition
property (z-index was the last CSS property).

Bug: 746468
Change-Id: I338996e4f8ac127cd2c6589f9f7ebedcf5d0e754
Reviewed-on: https://chromium-review.googlesource.com/582258
Commit-Queue: Darren Shen <shend@chromium.org>
Reviewed-by: dstockwell <dstockwell@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490251}
Former-commit-id: a3c8a1b29d4800a78f7df20d61471a9ba6d4bbe4